Basic random tones and higher and lower view

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     <!-- Our scripts -->
     <script src="webaudio_tools.js"></script>
     <script src="main.js"></script>
+
+    <!-- Ubunut font -->
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   </head>
   <body>
+    <span id="level">Level 0</span>
+    <div id="up">
+      <span class="center">Higher</span></div>
+    <div id="down">
+      <span class="center">Lower</span>
+    </div>
   </body>
 </html>
