--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <!-- Our scripts -->
     <script src="webaudio_tools.js"></script>
+    <script src="tone.js"></script>
     <script src="main.js"></script>
 
     <!-- Ubunut font -->
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   </head>
   <body>
-    <span id="level">Level 0</span>
+    <span id="level">Level 0<br>300%</span>
     <div id="up">
       <span class="center">Higher</span></div>
     <div id="down">
