--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   </head>
   <body>
-    <span id="level">Level 0<br>300%</span>
+    <span id="level">Level 0<br>50%</span>
+    <span id="flash-banner">Game over</span>
     <div id="up">
       <span class="center">Higher</span></div>
     <div id="down">
