--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Template Page</title>
+    <title>PitchCompare</title>
 
     <!-- Styles -->
     <link href="style.css" rel="stylesheet">
